// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF JVmpd"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF hfShcy"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF eALGys"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF fVuxbX"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF ihSSAI"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF laXfUa"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF JVmpd"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF hfShcy"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF eALGys"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF JVmpd"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF hfShcy"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF eALGys"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF JVmpd"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF hfShcy"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF eALGys"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-oTTbF JVmpd"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-oTTbF hfShcy"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF eALGys"
          dir="rtl"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-fOpBKL dUFjbR"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <input
        className="sc-oTTbF JVmpd"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <input
        className="sc-oTTbF hfShcy"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF hqa-DLx"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF fCOrmC"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF dhyhyt"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK fQvxgz"
      >
        <input
          className="sc-oTTbF eALGys"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
